--- a/index.html
+++ b/index.html
@@ -112,30 +112,30 @@
             <img id="banner-image" src="" alt="Bannière thématique">
         </div>
 
-       <!-- Extra Image sous la bannière -->
-<div class="extra-image-container">
-    <img id="extra-image" src="" alt="Extra Image" class="extra-image">
+       <!-- Conteneur principal pour Diceman, boutons et How to Play -->
+<div class="diceman-wrapper">
+    <!-- Extra Image sous la bannière -->
+    <div class="extra-image-container">
+        <img id="extra-image" src="" alt="Extra Image" class="extra-image">
+    </div>
+
+    <!-- Conteneur des contrôles (How to Play, Boutons musique, Buy Me a Coffee) -->
+    <div class="controls-container">
+        <a href="how-to-play.html">
+            <img src="images/dice-how-to-play.png" alt="How to Play" class="how-to-play-img">
+        </a>
+        <button id="play-music" class="music-button">🎵 Play Music</button>
+        <button id="pause-music" class="music-button">⏸ Pause Music</button>
+        <a id="buy-me-button" href="https://ko-fi.com/dicemanschaos" target="_blank" class="coffee-button">☕ Buy Me a Coffee</a>
+    </div>
+
+    <!-- Image du Diceman sous les boutons -->
+    <div class="diceman-container">
+        <img id="diceman-image" src="" alt="Image du DiceMan">
+    </div>
 </div>
 
-        <!-- Conteneur principal pour Diceman, boutons et How to Play -->
-        <div class="diceman-wrapper">
-
-           <!-- Nouvelle disposition des boutons -->
-<div class="controls-container">
-    <a href="how-to-play.html">
-        <img src="images/dice-how-to-play.png" alt="How to Play" class="how-to-play-img">
-    </a>
-    <button id="play-music" class="music-button">🎵 Play Music</button>
-    <button id="pause-music" class="music-button">⏸ Pause Music</button>
-    <a id="buy-me-button" href="https://ko-fi.com/dicemanschaos" target="_blank" class="coffee-button">☕ Buy Me a Coffee</a>
-</div>
-
-<!-- Image du Diceman sous les boutons -->
-<div class="diceman-container">
-    <img id="diceman-image" src="" alt="Image du DiceMan">
-</div>
-
-       <!-- Phrase d'accroche fixe pour le SEO -->
+<!-- Phrase d'accroche fixe pour le SEO -->
 <h2 class="seo-title">A completely non-random piece of advice from Mr. Fifth :</h2>
 
 <!-- Phrase aléatoire qui change dynamiquement -->
