--- a/index.html
+++ b/index.html
@@ -104,39 +104,42 @@
      crossorigin="anonymous"></script>
 </head>
 
-  <body>
+ <body>
     <div id="app">
-         <!-- Bannière -->
+        <!-- ✅ Bannière -->
         <div class="banner-container">
             <h1 class="hidden-title">Diceman’s Chaos - Put Your Fate in a Roll</h1>
             <img id="banner-image" src="" alt="Bannière thématique">
         </div>
 
-       <!-- Conteneur principal pour Diceman, boutons et How to Play -->
-<div class="diceman-wrapper">
-    <!-- Extra Image sous la bannière -->
-    <div class="extra-image-container">
-        <img id="extra-image" src="" alt="Extra Image" class="extra-image">
-    </div>
+        <!-- ✅ Extra Image SOUS la bannière -->
+        <div class="extra-image-container">
+            <img id="extra-image" src="" alt="Extra Image" class="extra-image">
+        </div>
 
-    <!-- Conteneur des contrôles (How to Play, Boutons musique, Buy Me a Coffee) -->
-    <div class="controls-container">
-        <a href="how-to-play.html">
-            <img src="images/dice-how-to-play.png" alt="How to Play" class="how-to-play-img">
-        </a>
-        <button id="play-music" class="music-button">🎵 Play Music</button>
-        <button id="pause-music" class="music-button">⏸ Pause Music</button>
-        <a id="buy-me-button" href="https://ko-fi.com/dicemanschaos" target="_blank" class="coffee-button">☕ Buy Me a Coffee</a>
-    </div>
+        <!-- ✅ Conteneur principal (boutons + Diceman) -->
+        <div class="diceman-wrapper">
 
-    <!-- Image du Diceman sous les boutons -->
-    <div class="diceman-container">
-        <img id="diceman-image" src="" alt="Image du DiceMan">
-    </div>
-</div>
+            <!-- ✅ Conteneur des contrôles (How to Play, Boutons musique, Buy Me a Coffee) -->
+            <div class="controls-container">
+                <a href="how-to-play.html">
+                    <img src="images/dice-how-to-play.png" alt="How to Play" class="how-to-play-img">
+                </a>
+                <button id="play-music" class="music-button">🎵 Play Music</button>
+                <button id="pause-music" class="music-button">⏸ Pause Music</button>
+                <a id="buy-me-button" href="https://ko-fi.com/dicemanschaos" target="_blank" class="coffee-button">☕ Buy Me a Coffee</a>
+            </div>
 
-<!-- Phrase d'accroche fixe pour le SEO -->
-<h2 class="seo-title">A completely non-random piece of advice from Mr. Fifth :</h2>
+            <!-- ✅ Image du Diceman (Centrée correctement) -->
+            <div class="diceman-container">
+                <img id="diceman-image" src="" alt="Image du DiceMan">
+            </div>
+
+        </div> <!-- Fin de diceman-wrapper -->
+
+        <!-- ✅ Phrase d'accroche fixe pour le SEO -->
+        <h2 class="seo-title">A completely non-random piece of advice from Mr. Fifth :</h2>
+    </div> <!-- Fin de #app -->
 
 <!-- Phrase aléatoire qui change dynamiquement -->
 <div class="phrase-container">
