--- a/index.html
+++ b/index.html
@@ -117,25 +117,29 @@
             <img id="extra-image" src="" alt="Extra Image" class="extra-image">
         </div>
 
-        <!-- ✅ Conteneur principal (boutons + Diceman) -->
-        <div class="diceman-wrapper">
+       <!-- ✅ Conteneur principal (3 colonnes sur PC) -->
+<div class="diceman-wrapper">
 
-            <!-- ✅ Conteneur des contrôles (How to Play, Boutons musique, Buy Me a Coffee) -->
-            <div class="controls-container">
-                <a href="how-to-play.html">
-                    <img src="images/dice-how-to-play.png" alt="How to Play" class="how-to-play-img">
-                </a>
-                <button id="play-music" class="music-button">🎵 Play Music</button>
-                <button id="pause-music" class="music-button">⏸ Pause Music</button>
-                <a id="buy-me-button" href="https://ko-fi.com/dicemanschaos" target="_blank" class="coffee-button">☕ Buy Me a Coffee</a>
-            </div>
+    <!-- ✅ Colonne de gauche : How to Play + Buy Me a Coffee -->
+    <div class="left-container">
+        <a href="how-to-play.html">
+            <img src="images/dice-how-to-play.png" alt="How to Play" class="how-to-play-img">
+        </a>
+        <a id="buy-me-button" href="https://ko-fi.com/dicemanschaos" target="_blank" class="coffee-button">☕ Buy Me a Coffee</a>
+    </div>
 
-            <!-- ✅ Image du Diceman (Centrée correctement) -->
-            <div class="diceman-container">
-                <img id="diceman-image" src="" alt="Image du DiceMan">
-            </div>
+    <!-- ✅ Colonne centrale : Image du Diceman -->
+    <div class="diceman-container">
+        <img id="diceman-image" src="" alt="Image du DiceMan">
+    </div>
 
-        </div> <!-- Fin de diceman-wrapper -->
+    <!-- ✅ Colonne de droite : Boutons de musique -->
+    <div class="right-container">
+        <button id="play-music" class="music-button">🎵 Play Music</button>
+        <button id="pause-music" class="music-button">⏸ Pause Music</button>
+    </div>
+
+</div> <!-- Fin de diceman-wrapper -->
 
         <!-- ✅ Phrase d'accroche fixe pour le SEO -->
         <h2 class="seo-title">A completely non-random piece of advice from Mr. Fifth :</h2>
