--- a/how-to-play-2.html
+++ b/how-to-play-2.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>How to Play - Fun Version</title>
     <link rel="stylesheet" href="style.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1516412260411948"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
