--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
            <!-- ✅ CONTENEUR POUR LES BOUTONS SUR MOBILE (s'affiche SEULEMENT sur mobile) -->
         <div class="mobile-controls">
-            <a href="how-to-play.html">
+            <a href="#" id="random-how-to-play">
                 <img src="images/dice-how-to-play.png" alt="How to Play" class="how-to-play-img">
             </a>
             <button id="play-music" class="music-button">🎵</button>
@@ -132,9 +132,10 @@
             
             <!-- ✅ Colonne de gauche : How to Play & Buy Me a Coffee (PC) -->
             <div class="left-container">
-                <a href="how-to-play.html">
-                    <img src="images/dice-how-to-play.png" alt="How to Play" class="how-to-play-img">
-                </a>
+               <a href="#" id="random-how-to-play">
+                <img src="images/dice-how-to-play.png" alt="How to Play" class="how-to-play-img">
+            </a>
+
                 <a id="buy-me-button" href="https://ko-fi.com/dicemanschaos" target="_blank" class="coffee-button">
                     ☕ Buy Me a Coffee
                 </a>
