--- a/how-to-play-2.html
+++ b/how-to-play-2.html
@@ -32,5 +32,13 @@
             document.getElementById("result").innerText = messages[Math.floor(Math.random() * messages.length)];
         }
     </script>
+    
+    <footer>
+    <p>&copy; 2025 Diceman's Chaos - All rights reserved.</p>
+    <a href="index.html">Back to Home</a> | 
+    <a href="mentions-legales.html">Legal Notice</a> | 
+    <a href="cookie-policy.html">Cookie Policy</a> | 
+    <a href="privacy-policy.html">Privacy Policy</a>
+</footer>
 </body>
 </html>
