--- a/how-to-play-3.html
+++ b/how-to-play-3.html
@@ -18,5 +18,14 @@
         <p>Step 3: There is no step 3.</p>
         <button onclick="window.location.href='index.html'">🎲 Just Roll!</button>
     </main>
+
+    <footer>
+    <p>&copy; 2025 Diceman's Chaos - All rights reserved.</p>
+    <a href="index.html">Back to Home</a> | 
+    <a href="mentions-legales.html">Legal Notice</a> | 
+    <a href="cookie-policy.html">Cookie Policy</a> | 
+    <a href="privacy-policy.html">Privacy Policy</a>
+</footer>
+    
 </body>
 </html>
