--- a/how-to-play-4.html
+++ b/how-to-play-4.html
@@ -82,5 +82,14 @@
             }
         }
     </script>
+
+    <footer>
+    <p>&copy; 2025 Diceman's Chaos - All rights reserved.</p>
+    <a href="index.html">Back to Home</a> | 
+    <a href="mentions-legales.html">Legal Notice</a> | 
+    <a href="cookie-policy.html">Cookie Policy</a> | 
+    <a href="privacy-policy.html">Privacy Policy</a>
+</footer>
+    
 </body>
 </html>
