--- a/index.html
+++ b/index.html
@@ -130,16 +130,15 @@
         <!-- ✅ Conteneur principal (3 colonnes sur PC) -->
         <div class="diceman-wrapper">
             
-            <!-- ✅ Colonne de gauche : How to Play & Buy Me a Coffee (PC) -->
-            <div class="left-container">
-               <a href="#" id="random-how-to-play">
-                <img src="images/dice-how-to-play.png" alt="How to Play" class="how-to-play-img">
-            </a>
-
-                <a id="buy-me-button" href="https://ko-fi.com/dicemanschaos" target="_blank" class="coffee-button">
-                    ☕ Buy Me a Coffee
-                </a>
-            </div>
+             <!-- ✅ Colonne de gauche : How to Play & Buy Me a Coffee -->
+    <div class="left-container">
+        <a href="#" id="random-how-to-play">
+            <img src="images/dice-how-to-play.png" alt="How to Play" class="how-to-play-img">
+        </a>
+        <a id="buy-me-button" href="https://ko-fi.com/dicemanschaos" target="_blank" class="coffee-button">
+            ☕ Buy Me a Coffee
+        </a>
+    </div>
 
             <!-- ✅ Colonne du centre : Image du Diceman -->
             <div class="diceman-container">
