--- a/index.html
+++ b/index.html
@@ -133,9 +133,10 @@
              <!-- ✅ Colonne de gauche : How to Play & Buy Me a Coffee -->
     <div class="left-container">
         <a href="#" id="random-how-to-play">
-                <img src="images/dice-how-to-play.png" alt="How to Play" class="how-to-play-img">
+               <img src="images/dice-how-to-play.png" alt="How to Play" class="how-to-play-img">
         </a>
-        <a id="buy-me-button" href="https://ko-fi.com/dicemanschaos" target="_blank" class="coffee-button">☕</a>
+        <a id="buy-me-button" href="https://ko-fi.com/dicemanschaos" target="_blank" class="coffee-button">
+            ☕ Buy Me a Coffee
         </div>
 
             <!-- ✅ Colonne du centre : Image du Diceman -->
