--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
             <img id="extra-image" src="" alt="Extra Image" class="extra-image">
         </div>
 
-           <!-- ✅ CONTENEUR POUR LES BOUTONS SUR MOBILE (s'affiche SEULEMENT sur mobile) -->
+            <!-- ✅ CONTENEUR POUR LES BOUTONS SUR MOBILE (s'affiche SEULEMENT sur mobile) -->
         <div class="mobile-controls">
-            <a href="#" id="random-how-to-play">
+            <a href="how-to-play.html">
                 <img src="images/dice-how-to-play.png" alt="How to Play" class="how-to-play-img">
             </a>
             <button id="play-music" class="music-button">🎵</button>
@@ -130,14 +130,15 @@
         <!-- ✅ Conteneur principal (3 colonnes sur PC) -->
         <div class="diceman-wrapper">
             
-             <!-- ✅ Colonne de gauche : How to Play & Buy Me a Coffee -->
-    <div class="left-container">
-        <a href="#" id="random-how-to-play">
-               <img src="images/dice-how-to-play.png" alt="How to Play" class="how-to-play-img">
-        </a>
-        <a id="buy-me-button" href="https://ko-fi.com/dicemanschaos" target="_blank" class="coffee-button">
-            ☕ Buy Me a Coffee
-        </div>
+            <!-- ✅ Colonne de gauche : How to Play & Buy Me a Coffee (PC) -->
+            <div class="left-container">
+                <a href="how-to-play.html">
+                    <img src="images/dice-how-to-play.png" alt="How to Play" class="how-to-play-img">
+                </a>
+                <a id="buy-me-button" href="https://ko-fi.com/dicemanschaos" target="_blank" class="coffee-button">
+                    ☕ Buy Me a Coffee
+                </a>
+            </div>
 
             <!-- ✅ Colonne du centre : Image du Diceman -->
             <div class="diceman-container">
