--- a/index.html
+++ b/index.html
@@ -135,8 +135,7 @@
                 <a href="#" id="random-how-to-play">
                     <img src="images/dice-how-to-play.png" alt="How to Play" class="how-to-play-img">
                 </a>
-                <a id="buy-me-button" href="https://ko-fi.com/dicemanschaos" target="_blank" class="coffee-button">
-                </a>
+                <a id="buy-me-button" href="https://ko-fi.com/dicemanschaos" target="_blank" class="coffee-button">☕ Buy Me a Coffee</a>
             </div>
 
             <!-- ✅ Colonne du centre : Image du Diceman -->
