--- a/index.html
+++ b/index.html
@@ -10,7 +10,96 @@
   <link rel="preload" href="style.css" as="style">
   <link rel="stylesheet" href="style.css">
 
-  <!-- (Autres meta tags SEO, Open Graph, etc. peuvent rester inchangés) -->
+ <!-- ✅ SEO : Titre et Description -->
+    <title>Diceman's Chaos - Put Your Fate in a Roll</title>
+    <meta name="description" content="Diceman's Chaos - A fun, chaotic way to let fate decide your next move! Roll the dice and embrace randomness.">
+    <meta name="keywords" content="dice, chaos, random, fate, game, fun, challenge, decision making, randomness">
+    <meta name="author" content="Diceman's Chaos Team">
+    <meta name="robots" content="index, follow"> <!-- Permet à Google d’indexer le site -->
+    <meta name="google-site-verification" content="Ic8HLoyZCWYrFreZ9uIo_v1z-e3FaHpU_Ko3MBRidGw" />
+
+    <!-- ✅ Open Graph (Facebook, Twitter & Social Sharing) -->
+    <meta property="og:title" content="Diceman's Chaos - Put Your Fate in a Roll">
+    <meta property="og:description" content="A fun, chaotic way to let fate decide your next move! Roll the dice and embrace randomness.">
+    <meta property="og:image" content="https://github.com/GuillaumeB974/Diceman-s-Chaos/blob/main/images/og-image.jpg"> 
+    <meta property="og:url" content="https://dicemans-chaos.netlify.app/">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Diceman's Chaos - Put Your Fate in a Roll">
+    <meta name="twitter:description" content="A fun, chaotic way to let fate decide your next move! Roll the dice and embrace randomness.">
+    <meta name="twitter:image" content="https://github.com/GuillaumeB974/Diceman-s-Chaos/blob/main/images/og-image.jpg">
+
+      <!-- ✅ Sitemap & Robots -->
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="sitemap.xml">
+    <meta name="robots" content="index, follow">
+
+    <!-- ✅ (Optionnel) Google Analytics -->
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=YOUR_GA_ID"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'YOUR_GA_ID');
+    </script> -->
+
+    <!-- ✅ (Optionnel) Google AdSense -->
+    <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" crossorigin="anonymous"></script> -->
+
+    <script type="application/ld+json">
+{
+    "@context": "https://schema.org",
+    "@type": "Website",
+    "name": "Diceman's Chaos",
+    "url": "https://dicemans-chaos.netlify.app/",
+    "description": "Put Your Fate In A Roll! A fun, chaotic, and engaging game where randomness rules your destiny.",
+    "image": "https://github.com/GuillaumeB974/Diceman-s-Chaos/blob/main/images/og-image.jpg",
+    "author": {
+        "@type": "Person",
+        "name": "Mister Fifth"
+    },
+    "publisher": {
+        "@type": "Organization",
+        "name": "Diceman's Chaos",
+        "logo": {
+            "@type": "ImageObject",
+            "url": "https://github.com/GuillaumeB974/Diceman-s-Chaos/blob/main/favicon.ico"
+        }
+    },
+    "sameAs": [
+        "https://www.facebook.com/DiceMansChaos/",
+        "https://ko-fi.com/dicemanschaos"
+    ]
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Game",
+  "name": "Diceman's Chaos",
+  "description": "Put your fate in a roll! An interactive game where randomness takes control of your choices.",
+  "applicationCategory": "Game",
+  "operatingSystem": "All",
+  "creator": {
+    "@type": "Person",
+    "name": "Mister Fifth"
+  },
+  "publisher": {
+    "@type": "Organization",
+    "name": "Diceman's Chaos"
+  },
+  "image": "https://github.com/GuillaumeB974/Diceman-s-Chaos/blob/main/images/og-image.jpg",
+  "url": "https://dicemans-chaos.netlify.app/",
+  "offers": {
+    "@type": "Offer",
+    "price": "0.00",
+    "priceCurrency": "USD"
+  }
+}
+</script>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1516412260411948"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <div id="app">
