--- a/index.html
+++ b/index.html
@@ -181,7 +181,26 @@
         <img src="images/dice1.png" alt="Dice 1" class="dice-image">
         <p class="dice-phrase"></p>
       </div>
-      <!-- Ajoutez ici les autres dés si nécessaire -->
+      <div class="dice" id="dice-2">
+                <img src="" alt="Dice 2" class="dice-image">
+                <p class="dice-phrase"></p>
+            </div>
+            <div class="dice" id="dice-3">
+                <img src="" alt="Dice 3" class="dice-image">
+                <p class="dice-phrase"></p>
+            </div>
+            <div class="dice" id="dice-4">
+                <img src="" alt="Dice 4" class="dice-image">
+                <p class="dice-phrase"></p>
+            </div>
+            <div class="dice" id="dice-5">
+                <img src="" alt="Dice 5" class="dice-image">
+                <p class="dice-phrase"></p>
+            </div>
+            <div class="dice" id="dice-6">
+                <img src="" alt="Dice 6" class="dice-image">
+                <p class="dice-phrase"></p>
+            </div>
     </section>
 
     <!-- Bouton Roll the Dice -->
