--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
       <a href="#" class="mobile-link" id="random-how-to-play">
         <img src="images/dice-how-to-play.png" alt="How to Play" class="how-to-play-img">
       </a>
-      <button id="play-music-mobile" class="music-button">🎵</button>
-      <button id="pause-music-mobile" class="music-button">⏸</button>
+      <button id="play-music" class="music-button">🎵</button>
+      <button id="pause-music" class="music-button">⏸</button>
       <a href="https://ko-fi.com/dicemanschaos" target="_blank" id="buy-me-mobile" class="coffee-button">☕</a>
     </nav>
 
@@ -141,8 +141,8 @@
 
       <!-- Colonne de droite -->
       <div class="right-container">
-        <button id="play-music-pc" class="music-button">🎵 Play Music</button>
-        <button id="pause-music-pc" class="music-button">⏸ Pause Music</button>
+        <button id="play-music" class="music-button">🎵 Play Music</button>
+        <button id="pause-music" class="music-button">⏸ Pause Music</button>
       </div>
     </main>
 
