--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       </a>
       <button id="play-music" class="music-button">🎵</button>
       <button id="pause-music" class="music-button">⏸</button>
-      <a href="https://ko-fi.com/dicemanschaos" target="_blank" id="buy-me-mobile" class="coffee-button">☕</a>
+      <a href="https://ko-fi.com/dicemanschaos" target="_blank" id="buy-me-button" class="coffee-button">☕</a>
     </nav>
 
     <!-- CONTENU PRINCIPAL POUR PC -->
@@ -131,7 +131,7 @@
         <a href="#" class="pc-link" id="random-how-to-play-pc">
           <img src="images/dice-how-to-play.png" alt="How to Play" class="how-to-play-img">
         </a>
-        <a href="https://ko-fi.com/dicemanschaos" target="_blank" id="buy-me-pc" class="coffee-button">☕ Buy Me a Coffee</a>
+        <a href="https://ko-fi.com/dicemanschaos" target="_blank" id="buy-me-button" class="coffee-button">☕ Buy Me a Coffee</a>
       </div>
 
       <!-- Colonne centrale -->
