--- a/index.html
+++ b/index.html
@@ -109,6 +109,11 @@
       <img id="banner-image" src="images/banner.jpg" alt="Bannière thématique">
     </header>
 
+    <div id="music-controls">
+  <button id="play-music" class="music-button">🎵 Play Music</button>
+  <button id="pause-music" class="music-button">⏸ Pause Music</button>
+</div>
+    
     <!-- Extra image sous la bannière -->
     <section class="extra-image-container">
       <img id="extra-image" src="images/extra.jpg" alt="Extra Image" class="extra-image">
@@ -119,8 +124,6 @@
       <a href="#" class="mobile-link" id="random-how-to-play">
         <img src="images/dice-how-to-play.png" alt="How to Play" class="how-to-play-img">
       </a>
-      <button id="play-music" class="music-button">🎵</button>
-      <button id="pause-music" class="music-button">⏸</button>
       <a href="https://ko-fi.com/dicemanschaos" target="_blank" id="buy-me-button" class="coffee-button">☕</a>
     </nav>
 
@@ -138,8 +141,6 @@
       <div class="diceman-container">
         <img id="diceman-image" src="images/diceman.jpg" alt="Image du DiceMan">
       </div>
-      <button id="play-music" class="music-button">🎵 Play Music</button>
-      <button id="pause-music" class="music-button">⏸ Pause Music</button>
       <!-- Colonne de droite -->
       <div class="right-container">
        
