--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
     
     <!-- Conteneur de contrôles (4 boutons en ligne) -->
     <section id="controls">
-      <button id="random-how-to-play" class="control-button">How to Play</button>
+      <a href="#" class="mobile-link" id="random-how-to-play">
+        <img src="images/dice-how-to-play.png" alt="How to Play" class="how-to-play-img">
+      </a>
       <button id="play-music" class="control-button">🎵 Play Music</button>
       <button id="pause-music" class="control-button">⏸ Pause Music</button>
       <a href="https://ko-fi.com/dicemanschaos" target="_blank" id="buy-me-button" class="control-button coffee-button">☕ Coffee</a>
